# Lingine

./: .gitignore  README.md  pyproject.toml  readme.md
configs/accelerate/: default_config.yaml  plain_config.yaml
configs/accelerate/4gpus/: default_config.yaml
configs/accelerate/8gpus/: default_config.yaml
configs/llava/: llama-2-7b-336.json  llama-3_1-8b-336.json  llama-3_2-1b-336.json  llama-3_2-1b-instruct-224.json  llama-3_2-1b-instruct-336.json  llama-3_2-1b-instruct.json  llama-3_2-3b-336.json  llama-3_2-3b-instruct-336.json  vicuna-1_5-7b-336.json  vicuna-1_5-7b.json
lingine/model/: llava.py
lingine/reinforce/: clip_rm.py  policy_gradient.py  utils.py  vl_grpo.py
run/RLBA/: pretrain.sh  pretrain_from_scratch.sh
run/mlan/: pretrain.sh
run/simVLM/: finetune_mix.sh  finetune_sn.sh  finetune_vf.sh  pretrain_llava.sh  pretrain_sgpt.sh  pretrain_sgpt_short.sh
scripts/mlan/: format_dataset.py  llava_pretrain.py
scripts/rlba/: pretrain_from_scratch.py  rlba_pretrain.py
